// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders StartPanel for board of experts unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--board-of-experts"
      >
        <span
          class="styles-module__root___-ALla"
        >
          <span
            class="styles-module__trigger___V2aIF"
            id="base-ui-:r7:"
          >
            <span
              aria-label="boardOfExperts"
            >
              <svg
                class="lucide lucide-users"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="9"
                  cy="7"
                  r="4"
                />
                <path
                  d="M22 21v-2a4 4 0 0 0-3-3.87"
                />
                <path
                  d="M16 3.13a4 4 0 0 1 0 7.75"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:r9:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel on instruct unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:rn:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageInstructExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.instructButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:r1:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completion provider down unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <span
          class="styles-module__root___-ALla memori--completion-provider-status--tooltip"
        >
          <span
            class="styles-module__trigger___V2aIF"
            id="base-ui-:r10:"
          >
            <svg
              class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:r12:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completions enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:r5:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought but unlogged unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <aside
              aria-labelledby="deep-thought-disclaimer-heading"
              class="memori--deep-thought-disclaimer"
            >
              <div
                aria-hidden="true"
                class="memori--deep-thought-disclaimer__icon memori--deep-thought-disclaimer__icon--compact"
              >
                <span>
                  i
                </span>
              </div>
              <div
                class="memori--deep-thought-disclaimer__body"
              >
                <div
                  class="memori--deep-thought-disclaimer__title-row"
                >
                  <h3
                    id="deep-thought-disclaimer-heading"
                  >
                    deepThought
                  </h3>
                </div>
                <p
                  class="memori--deep-thought-disclaimer__muted"
                >
                  deepThoughtPreDisclaimerUnlogged
                </p>
                <p
                  class="memori--deep-thought-disclaimer__actions"
                >
                  <button
                    class="memori-button memori-button--toolbar memori-button--sm"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      login.login
                    </span>
                  </button>
                  <span
                    class="styles-module__root___-ALla"
                  >
                    <span
                      class="styles-module__trigger___V2aIF"
                      id="base-ui-:rf:"
                    >
                      <button
                        aria-label="deepThoughtWhatIs"
                        class="memori-button memori-button--toolbar memori-button--sm memori--deep-thought-disclaimer__link"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="memori-button__content"
                        >
                          deepThoughtWhatIs
                        </span>
                      </button>
                    </span>
                  </span>
                </p>
              </div>
            </aside>
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:rh:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled but without permission flag unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <aside
              aria-labelledby="deep-thought-disclaimer-heading"
              class="memori--deep-thought-disclaimer"
            >
              <div
                aria-hidden="true"
                class="memori--deep-thought-disclaimer__icon memori--deep-thought-disclaimer__icon--compact"
              >
                <span>
                  i
                </span>
              </div>
              <div
                class="memori--deep-thought-disclaimer__body"
              >
                <div
                  class="memori--deep-thought-disclaimer__title-row"
                >
                  <h3
                    id="deep-thought-disclaimer-heading"
                  >
                    deepThought
                  </h3>
                </div>
                <p
                  class="memori--deep-thought-disclaimer__muted"
                >
                  deepThoughtPreDisclaimerNotAllowed
                </p>
                <p
                  class="memori--deep-thought-disclaimer__learn-more"
                >
                  <span
                    class="styles-module__root___-ALla"
                  >
                    <span
                      class="styles-module__trigger___V2aIF"
                      id="base-ui-:rj:"
                    >
                      <button
                        aria-label="deepThoughtWhatIs"
                        class="memori-button memori-button--toolbar memori-button--sm memori--deep-thought-disclaimer__link"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="memori-button__content"
                        >
                          deepThoughtWhatIs
                        </span>
                      </button>
                    </span>
                  </span>
                </p>
              </div>
            </aside>
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:rl:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <aside
              aria-labelledby="deep-thought-disclaimer-heading"
              class="memori--deep-thought-disclaimer"
            >
              <div
                aria-hidden="true"
                class="memori--deep-thought-disclaimer__icon memori--deep-thought-disclaimer__icon--compact"
              >
                <span>
                  i
                </span>
              </div>
              <div
                class="memori--deep-thought-disclaimer__body"
              >
                <div
                  class="memori--deep-thought-disclaimer__title-row"
                >
                  <h3
                    id="deep-thought-disclaimer-heading"
                  >
                    deepThoughtDisclaimerTitle
                  </h3>
                </div>
                <p
                  class="memori--deep-thought-disclaimer__learn-more"
                >
                  <span
                    class="styles-module__root___-ALla"
                  >
                    <span
                      class="styles-module__trigger___V2aIF"
                      id="base-ui-:rb:"
                    >
                      <button
                        aria-label="deepThoughtWhatIs"
                        class="memori-button memori-button--toolbar memori-button--sm memori--deep-thought-disclaimer__link"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="memori-button__content"
                        >
                          deepThoughtWhatIs
                        </span>
                      </button>
                    </span>
                  </span>
                </p>
              </div>
            </aside>
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:rd:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with existing sessionunchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:r3:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.resumeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with integrationConfig unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:rp:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with login required unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--needsLogin"
      >
        <p>
          write_and_speak.requirePositionHelp
        </p>
        <button
          class="memori-button memori-button--primary memori-button--md"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-user"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
          </span>
          <span
            class="memori-button__content"
          >
            login.login
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with multilangual unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--language-row"
        >
          <span
            class="memori--language-row__label"
          >
            write_and_speak.chatLanguageLabel
          </span>
          <div
            class="memori--language-row__control"
          >
            <div
              class="memori-combobox memori-combobox--language-chooser memori--language-row__combobox"
            >
              <label
                class="memori-combobox__label"
                for=":rq:"
                id=":rq:-label"
              >
                write_and_speak.chatLanguageLabel
              </label>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-labelledby=":rq:-label"
                class="memori-combobox__trigger"
                id=":rq:"
                role="combobox"
                tabindex="0"
                type="button"
              >
                <span
                  class="memori-combobox__value"
                >
                  English
                </span>
                <span
                  aria-hidden="true"
                  class="memori-combobox__trigger-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </span>
              </button>
              <input
                aria-hidden="true"
                id="base-ui-:rr:"
                name="user-lang-pref"
                style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
                tabindex="-1"
                value="EN"
              />
            </div>
          </div>
        </div>
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <div
              class="memori--start-panel__notice"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-help memori--start-panel__notice-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <p
                class="memori--start-panel__notice-text"
              >
                write_and_speak.pagePrivacyExplanation
              </p>
              <span
                class="styles-module__root___-ALla"
              >
                <span
                  class="styles-module__trigger___V2aIF"
                  id="base-ui-:ru:"
                >
                  <button
                    aria-label="privacyPolicy"
                    class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      <svg
                        class="lucide lucide-info memori--start-privacy-explanation-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with position required unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--needsPosition"
      >
        <p>
          write_and_speak.requirePositionHelp
        </p>
        <div
          class="memori--needsPosition-actions"
        >
          <button
            class="memori-button memori-button--primary memori-button--md"
            style="width: 100%;"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-map-pin"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.useMyPosition
            </span>
          </button>
          <button
            class="memori-button memori-button--outline memori-button--md"
            style="width: 100%;"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-map-pin-off"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.75 7.09a3 3 0 0 1 2.16 2.16"
                />
                <path
                  d="M17.072 17.072c-1.634 2.17-3.527 3.912-4.471 4.727a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 1.432-4.568"
                />
                <path
                  d="m2 2 20 20"
                />
                <path
                  d="M8.475 2.818A8 8 0 0 1 20 10c0 1.183-.31 2.377-.81 3.533"
                />
                <path
                  d="M9.13 9.13a3 3 0 0 0 3.74 3.74"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.dontWantToProvidePosition
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
